update html sign example

--- a/html-sign/index.html
+++ b/html-sign/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="app">
-      <button id="connect-button">Initializing...</button>
+      <button id="connect-button">Connect Wallet</button>
     </div>
     <script type="module" src="main.js"></script>
   </body>
